services/104.dns/pihole-unbound.5.deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app.kubernetes.io/name: pihole
  name: pihole
  namespace: dns
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: pihole
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:2023.05.2
          ports:
            - name: interface
              containerPort: 80
              protocol: TCP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole
            - mountPath: /etc/dnsmasq.d
              name: dnsmasq
#        - name: unbound
#          image: mvance/unbound:latest
#          ports:
#            - name: dns-tcp
#              containerPort: 53
#              protocol: TCP
#            - name: dns-udp
#              containerPort: 53
#              protocol: UDP
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
        - name: dnsmasq
          persistentVolumeClaim:
            claimName: dnsmasq
        - name: dnsmasq-config
          configMap:
            name: dnsmasq-config
