services/104.dns/pihole.5.deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app.kubernetes.io/name: pihole
  name: pihole
  namespace: dns
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: pihole
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:2026.04.0
          ports:
            - name: interface
              containerPort: 80
              protocol: TCP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
