services/104.dns/pihole.6.service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: pihole-interface
  namespace: dns
  annotations:
    metallb.io/allow-shared-ip: pihole
    metallb.io/loadBalancerIPs: 10.4.16.1
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "pihole"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - name: interface
      port: 80
      protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: pihole-dns-udp
  namespace: dns
  annotations:
    metallb.io/allow-shared-ip: pihole
    metallb.io/loadBalancerIPs: 10.4.16.1
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - name: dns
      port: 53
      protocol: UDP

---
kind: Service
apiVersion: v1
metadata:
  name: pihole-dns-tcp
  namespace: dns
  annotations:
    metallb.io/allow-shared-ip: pihole
    metallb.io/loadBalancerIPs: 10.4.16.1
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - name: dns
      port: 53
      protocol: TCP
