services/104.dns/pihole-unbound.4.deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app.kubernetes.io/name: pihole
  name: pihole
  namespace: dns
spec:
  replicas: 1 # temp
#  replicas: 2 # because its using php, we'd need to put $_SESSION into a shared store like REDIS
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: pihole
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:2023.05.2
          ports:
            - name: interface
              containerPort: 80
              protocol: TCP
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole
            - mountPath: /etc/dnsmasq.d
              name: dnsmasq
#        - name: unbound
#          image: mvance/unbound:latest
#          ports:
#            - name: dns-tcp
#              containerPort: 53
#              protocol: TCP
#            - name: dns-udp
#              containerPort: 53
#              protocol: UDP
      volumes:
        - name: pihole
          persistentVolumeClaim:
            claimName: pihole
        - name: dnsmasq
          persistentVolumeClaim:
            claimName: dnsmasq
        - name: dnsmasq-config
          configMap:
            name: dnsmasq-config

---
kind: Service
apiVersion: v1
metadata:
  name: pihole-interface
  namespace: dns
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - name: interface
      port: 80
      protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: pihole-dns-udp
  namespace: dns
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  type: LoadBalancer
  loadBalancerIP: 10.4.16.1 # This needs to be set, everything else we can do dynamically
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - name: dns
      port: 53
      protocol: UDP

---
kind: Service
apiVersion: v1
metadata:
  name: pihole-dns-tcp
  namespace: dns
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  type: LoadBalancer
  loadBalancerIP: 10.4.16.1 # This needs to be set, everything else we can do dynamically
  selector:
    app.kubernetes.io/name: pihole
  ports:
    - name: dns
      port: 53
      protocol: TCP

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pihole-interface
  namespace: dns
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: cloudflare-issuer-dni-sh
spec:
  rules:
    - host: pihole.dni.sh
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pihole-interface
                port:
                  number: 80
  tls:
    - hosts:
        - pihole.dni.sh
      secretName: pihole-dni-sh-certificate
