services/104.dns/pihole.7.ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pihole-interface
  namespace: dns
  annotations:
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: cloudflare-issuer-dni-sh
spec:
  rules:
    - host: pihole.dni.sh
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: pihole-interface
                port:
                  number: 80
  tls:
    - hosts:
        - pihole.dni.sh
      secretName: pihole-dni-sh-certificate
